api1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1-deployment
  namespace: default
  labels:
    app: api1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1-container
        image: nginx:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-full-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: html-volume
        configMap:
          name: api1-html
      - name: nginx-full-config-volume
        configMap:
          name: api1-nginx-full-config
