api2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2-deployment
  namespace: default
  labels:
    app: api2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers:
      - name: api2-container
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-full-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: html-volume
        configMap:
          name: api2-html
      - name: nginx-full-config-volume
        configMap:
          name: api2-nginx-full-config
