svc-dashboar.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-plus-dashboard
  namespace: nginx-ingress
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32080
  selector:
    app.kubernetes.io/name: nginx-ingress
