svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: api1-svc1
  namespace: default
spec:
  selector:
    app: api1
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
