svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2-svc2
  namespace: default
spec:
  selector:
    app: api2
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
